--- a/style.css
+++ b/style.css
@@ -9,15 +9,20 @@ body {
 }
 
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     padding-top: 20px;
     padding-bottom: 20px;
     padding-right: 10px;
     padding-left: 10px;
     background: #534b52;
     color: white;
+}
+
+.nav-content {
+    margin: 0 auto;
+     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 800px;
 }
 
 .nav-name {
