--- a/style.css
+++ b/style.css
@@ -4,8 +4,22 @@ body {
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     max-width: 800px;
     margin: 0 auto;
+}
+
+.profile-container {
+    margin-top: 20px;
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    background-image: url("images/profile.jpg");
+    background-size: contain;
+    box-shadow: 0 0 0 3px #534b52;
+
 }
 
 nav {
@@ -19,7 +33,7 @@ nav {
 
 .nav-content {
     margin: 0 auto;
-     display: flex;
+    display: flex;
     justify-content: space-between;
     align-items: center;
     max-width: 800px;
@@ -32,7 +46,7 @@ nav {
 
 .nav-icons {
     display: flex;
-     gap: 20px;
+    gap: 20px;
 }
 
 .nav-icon {
