--- a/style.css
+++ b/style.css
@@ -100,6 +100,10 @@ footer {
     margin: 0
 }
 
+.footer-content a {
+    text-decoration: none;
+}
+
 /* Projects page styling */
 .projects-container {
     display: flex;
